--- a/src/Pages/CourseInfo/CourseInfo.css
+++ b/src/Pages/CourseInfo/CourseInfo.css
@@ -33,3 +33,73 @@
 	width: 100%;
 	border-radius: 1rem;
 }
+
+.course-progress {
+	border-radius: 1rem;
+	margin: 3rem 0;
+	padding: 2rem 2rem 1.2rem 2rem;
+	background-color: #f0f2f7;
+}
+
+.course-progress__header {
+	display: flex;
+	align-items: center;
+	margin-bottom: 1.5rem;
+}
+
+.course-progress__icon {
+	font-size: 2.5rem;
+	color: #7b868a;
+}
+
+.course-progress__title {
+	margin-right: 1.5rem;
+	color: #7b868a;
+	font-size: 1.5rem;
+}
+
+.course-progress__bar {
+	border-radius: 10rem;
+	height: 1rem;
+}
+
+.progress-bar {
+	background-color: #1fbd50;
+}
+
+.introduction {
+	padding: 3rem;
+	border-radius: 0.5rem;
+	box-shadow: 0 0 13px 1px rgba(70, 72, 77, 0.08);
+}
+
+.introduction__img {
+	margin-top: 3rem;
+	display: block;
+	border-radius: 1rem;
+}
+
+.introduction__text {
+	margin-top: 2rem;
+	color: #7a7a7a;
+	font-size: 1.5rem;
+}
+
+.introduction__btns {
+	margin-top: 4rem;
+}
+
+.introduction__btns-item {
+	color: var(--primary-color);
+	border: 2px solid var(--primary-color);
+	border-radius: 0.5rem;
+	padding: 0.8rem 1.5rem;
+  margin: 0.5rem;
+	font-weight: bold;
+	font-size: 1.5rem;
+}
+
+.introduction__btns-item:hover {
+	color: var(--white-color);
+	background-color: var(--primary-color);
+}
