User Login Alert Handled

--- a/frontend/src/Pages/Login/Login.css
+++ b/frontend/src/Pages/Login/Login.css
@@ -179,3 +179,9 @@
 .login-form__btn-error {
   background-color: #a8aaaf;
 }
+
+.swal-footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
